MangoBajito/tests/Lenguajes_2/Operacion/errors/07-decremento.mng
# Test 07: Operacion de errores en decremento.
se_prende(){
	culito decl0 : negro;
	decl0--;

	culito decl1 : higuerote;
	decl1--;

	culito decl2 : tas_claro;
	decl2--;
};